--- a/source/index.html
+++ b/source/index.html
@@ -114,7 +114,7 @@
 
     <section class="promo-block">
       <div class="promo-block__wrapper">
-        <h2 class="promo-block__header">Заинтересовались</h2>
+        <h2 class="promo-block__header">Заинтересовались?</h2>
         <p class="promo-block__discription">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
           гостиниц в седоне</p>
         <a class="button promo-block__button" href="#">Найти гостиницу</a>
