--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
       <img class="main-header__logo-img" src="./img/logo_sedona.svg" width="185" height="96" alt="Логотип сайта Седона">
     </a>
 
-    <nav class="main-nav main-nav--opened">
+    <nav class="main-nav main-nav--closed">
 
       <ul class="site-list">
         <li class="site-list__item site-list__item--current">
@@ -127,6 +127,7 @@
 
     <section class="map">
       <div class="map__wrapper">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.13688486581!2d-111.83633811263877!3d34.85444188808479!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1691534084038!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="США, Аризона, Седона"></iframe>
 
       </div>
     </section>
