--- a/source/form.html
+++ b/source/form.html
@@ -23,7 +23,7 @@
           <a class="site-list__link" href="#">Html Academy </a>
         </li>
       </ul>
-      <a class="main-header__logo">
+      <a class="main-header__logo href="index.html">
         <img
           class="main-header__logo-img"
           src="./img/logo_sedona.svg"
@@ -276,11 +276,10 @@
           </ul>
         </div>
         <div class="main-footer__logo">
-          <a class="main-footer__logo-academy">
+          <a class="main-footer__logo-academy" href="https://htmlacademy.ru/intensive/adaptive">
             <img
               class="main-footer__logo-academy-img"
               src="./img/logo-footer-academy.svg"
-              href="#"
               alt="Логотип Академии"
             /><span class="main-footer__logo-academy-text"> Разработано</span>
           </a>
