--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
       <img class="main-header__logo-img" src="./img/logo_sedona.svg" width="185" height="96" alt="Логотип сайта Седона">
     </a>
 
-    <nav class="main-nav main-nav--closed">
+    <nav class="main-nav main-nav--opened">
 
       <ul class="site-list">
         <li class="site-list__item site-list__item--current">
@@ -24,11 +24,11 @@
           </a>
         </li>
         <li class="site-list__item site-list__item">
-          <a class="site-list__link" href="#">Фото и видео
+          <a class="site-list__link" href="catalog.html">Фото и видео
           </a>
         </li>
         <li class="site-list__item site-list__item">
-          <a class="site-list__link" href="#">Форма отзыва
+          <a class="site-list__link" href="form.html">Форма отзыва
           </a>
         </li>
         <li class="site-list__item site-list__item">
@@ -174,8 +174,8 @@
           </ul>
         </div>
         <div class="main-footer__logo">
-          <a class="main-footer__logo-academy">
-            <img class="main-footer__logo-academy-img" src="./img/logo-footer-academy.svg" href="#" alt="Логотип Академии"><span
+          <a class="main-footer__logo-academy" href="https://htmlacademy.ru/intensive/adaptive">
+            <img class="main-footer__logo-academy-img" src="./img/logo-footer-academy.svg" alt="Логотип Академии"><span
               class="main-footer__logo-academy-text"> Разработано</span>
           </a>
         </div>
