работа с сетками продолжение 2

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -60,7 +60,7 @@
             вам забыть о политике и экономике.
           </p>
           <ul class="photo-gallery__list">
-            <li class="photo-gallery__item">
+            <li class="photo-gallery__item photo-gallery__item--main">
               <a class="photo-gallery__link">
                 <picture>
                   <source
@@ -85,9 +85,7 @@
                   />
                 </picture>
               </a>
-              <div
-                class="photo-gallery__item-information photo-gallery__item-main"
-              >
+              <div class="photo-gallery__item-information">
                 <div class="photo-gallery__item-text">
                   <h3 class="photo-gallery__title">Неродные просторы</h3>
                   <p class="photo-gallery__photo-author">Автор фото: Борис</p>
