домашка адаптивные сетки

--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,9 @@
       <img class="main-header__logo-img" src="./img/logo_sedona.svg" width="185" height="96" alt="Логотип сайта Седона">
     </a>
 
-    <nav class="main-nav main-nav--opened">
+    <!-- для демонстрации открытого меню добавить класс main-nav--opened -->
+    <!-- для демонстрации закрытого меню добавить класс main-nav--closed -->
+    <nav class="main-nav">
 
       <ul class="site-list">
         <li class="site-list__item site-list__item--current">
