--- a/source/form.html
+++ b/source/form.html
@@ -9,21 +9,7 @@
   </head>
   <body class="page__body">
     <header class="main-header">
-      <ul class="site-list">
-        <li class="site-list__item site-list__item--current">
-          <a class="site-list__link" href="#">Главная </a>
-        </li>
-        <li class="site-list__item site-list__item">
-          <a class="site-list__link" href="#">Фото и видео </a>
-        </li>
-        <li class="site-list__item site-list__item">
-          <a class="site-list__link" href="#">Форма отзыва </a>
-        </li>
-        <li class="site-list__item site-list__item">
-          <a class="site-list__link" href="#">Html Academy </a>
-        </li>
-      </ul>
-      <a class="main-header__logo href="index.html">
+      <a class="main-header__logo">
         <img
           class="main-header__logo-img"
           src="./img/logo_sedona.svg"
@@ -32,7 +18,27 @@
           alt="Логотип сайта Седона"
         />
       </a>
+
+      <!-- для демонстрации открытого меню добавить класс main-nav--opened -->
+      <!-- для демонстрации закрытого меню добавить класс main-nav--closed -->
       <nav class="main-nav">
+        <ul class="site-list">
+          <li class="site-list__item site-list__item--current">
+            <a class="site-list__link site-list__link--current" href="#"
+              >Главная
+            </a>
+          </li>
+          <li class="site-list__item site-list__item">
+            <a class="site-list__link" href="catalog.html">Фото и видео </a>
+          </li>
+          <li class="site-list__item site-list__item">
+            <a class="site-list__link" href="form.html">Форма отзыва </a>
+          </li>
+          <li class="site-list__item site-list__item">
+            <a class="site-list__link" href="#">Html Academy </a>
+          </li>
+        </ul>
+
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
@@ -276,7 +282,10 @@
           </ul>
         </div>
         <div class="main-footer__logo">
-          <a class="main-footer__logo-academy" href="https://htmlacademy.ru/intensive/adaptive">
+          <a
+            class="main-footer__logo-academy"
+            href="https://htmlacademy.ru/intensive/adaptive"
+          >
             <img
               class="main-footer__logo-academy-img"
               src="./img/logo-footer-academy.svg"
