страница индекс прям вот-вот

--- a/source/index.html
+++ b/source/index.html
@@ -52,7 +52,7 @@
 
     <section class="welcome">
       <div class="welcome__wrapper">
-        <h2 class="welcome__header">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h2>
+        <h2 class="welcome__header">СЕДОНА — небольшой городок в&nbsp;АРИЗОНЕ, заслуживающий большего!</h2>
         <p class="welcome__text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       </div>
     </section>
@@ -61,8 +61,8 @@
       <div class="advantages__wrapper">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages__list">
-          <li class="advantages__item advantages__item--blue">
-            <h3 class="advantages__title">Настоящий городок</h3>
+          <li class="advantages__item advantages__item--blue advantages__item--top">
+            <h3 class="advantages__title advantages__title-blue">Настоящий городок</h3>
             <div class="advantages__number">— №1 —</div>
             <p class="advantages__discription">СЕДОНА не аттракцион для туристов, там течет своя жизнь</p>
           </li>
@@ -75,44 +75,51 @@
           </picture>
           </li>
           <li class="advantages__item advantages__item--white advantages__item--house">
-            <h3 class="advantages__title">Жилье</h3>
+            <h3 class="advantages__title advantages__title-white">Жилье</h3>
             <p class="advantages__discription advantages__discription">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
           </li>
           <li class="advantages__item advantages__item--white advantages__item--food">
-            <h3 class="advantages__title">Еда</h3>
-            <p class="advantages__discription advantages__discription-white">Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</p>
+            <h3 class="advantages__title advantages__title-white">Еда</h3>
+            <p class="advantages__discription advantages__discription-white">Всегда заказывайте фирменный бургер, Вы&nbsp;не&nbsp;разочаруетесь!</p>
           </li>
           <li class="advantages__item advantages__item--white advantages__item--souvenirs">
-            <h3 class="advantages__title">Сувениры</h3>
-            <p class="advantages__discription advantages__discription-white">Не только китайского, но и местного производства!</p>
+            <h3 class="advantages__title advantages__title-white">Сувениры</h3>
+            <p class="advantages__discription advantages__discription-white">Не только китайского, <br>но и местного производства!</p>
           </li>
-          <li class="advantages__item advantages__item--blue">
-            <h3 class="advantages__title">Там есть мост дьявола</h3>
-            <div class="advantages__number advantages__number-blue">— №2 —</div>
-            <p class="advantages__discription advantages__discription-blue">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          </li>
-          <li class="advantages__image">
-            <picture>
-              <source srcset="./img/photo-bridge.jpg" type="image/jpeg" media="(max-width: 320px)">
-              <source srcset="./img/photo-bridge-tablet.jpg" type="image/jpeg" media="(min-width: 768px)">
-              <source srcset="./img/photo-bridge-tablet.jpg" type="image/jpeg" media="(min-width: 1200px)">
-            <img src="./img/photo-bridge.jpg" alt="Мост дьявола">
-          </picture>
-          </li>
-          <li class="advantages__item advantages__item-grey">
+
+
+
+              <li class="advantages__item advantages__item--blue advantages__item--low">
+                <h3 class="advantages__title">Там есть мост дьявола</h3>
+                <div class="advantages__number advantages__number-blue">— №2 —</div>
+                <p class="advantages__discription advantages__discription-blue">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+              </li>
+
+
+              <li class="advantages__image">
+                <picture>
+                  <source srcset="./img/photo-bridge.jpg" type="image/jpeg" media="(max-width: 320px)">
+                  <source srcset="./img/photo-bridge-tablet.jpg" type="image/jpeg" media="(min-width: 768px)">
+                  <source srcset="./img/photo-bridge-tablet.jpg" type="image/jpeg" media="(min-width: 1200px)">
+                <img src="./img/photo-bridge.jpg" alt="Мост дьявола">
+              </picture>
+              </li>
+
+
+          <li class="advantages__item advantages__item-grey advantages__item-grey--square">
             <h3 class="advantages__title">Небольшая площадь</h3>
             <div class="advantages__number advantages__number-grey">— №3 —</div>
             <p class="advantages__discription advantages__discription-grey">Все интересные места находятся очень близко</p>
           </li>
-          <li class="advantages__item advantages__item-grey">
+          <li class="advantages__item advantages__item-grey advantages__item-grey--road">
             <h3 class="advantages__title">Красивая дорога</h3>
             <div class="advantages__number advantages__number-grey">— №4 —</div>
-            <p class="advantages__discription advantages__discription-grey">Ехать в Седону из Лас-Вегаса совсем НЕ СКУЧНО!</p>
+            <p class="advantages__discription advantages__discription-grey">Ехать в Седону из Лас-&nbsp;Вегаса совсем&nbsp;НЕ СКУЧНО!</p>
           </li>
-          <li class="advantages__item advantages__item-grey">
+          <li class="advantages__item advantages__item-grey advantages__item-grey--tourist">
             <h3 class="advantages__title">Мало туристов</h3>
             <div class="advantages__number advantages__number-grey">— №5 —</div>
-            <p class="advantages__discription advantages__discription-grey">Большинство едет в гранд каньон и толпится там</p>
+            <p class="advantages__discription advantages__discription-grey">Большинство едет в гранд каньон и&nbsp;толпится там</p>
           </li>
         </ul>
       </div>
@@ -121,7 +128,7 @@
     <section class="promo-block">
       <div class="promo-block__wrapper">
         <h2 class="promo-block__header">Заинтересовались?</h2>
-        <p class="promo-block__discription">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
+        <p class="promo-block__discription">Укажите предполагаемые даты поездки,&nbsp;и&nbsp;мы покажем вам лучшие предложения
           гостиниц в седоне</p>
         <a class="button promo-block__button" href="#">Найти гостиницу</a>
         <div>
@@ -177,8 +184,8 @@
         </div>
         <div class="main-footer__logo">
           <a class="main-footer__logo-academy" href="https://htmlacademy.ru/intensive/adaptive">
-            <img class="main-footer__logo-academy-img" src="./img/logo-footer-academy.svg" alt="Логотип Академии"><span
-              class="main-footer__logo-academy-text"> Разработано</span>
+            <span
+              class="main-footer__logo-academy-text">Разработано</span> <img class="main-footer__logo-academy-img" src="./img/logo-footer-academy.svg" alt="Логотип Академии">
           </a>
         </div>
       </div>
