за эту ночь выхлопа 0

--- a/source/form.html
+++ b/source/form.html
@@ -207,13 +207,13 @@
 
           <div class="review-form__attractions-block">
             <fieldset class="review-form__attractions">
-              <legend class="review-form__impression-title">
+              <legend class="review-form__attractions-title">
                 Посещенные достопримечательности:
               </legend>
               <ul class="review-form__attractions-list">
                 <li class="review-form__attractions-item">
                   <input
-                    class="control-input control-input-check"
+                    class="control-input control-input-check visually-hidden"
                     id="check-1"
                     type="checkbox"
                     name="devils-bridge"
@@ -224,7 +224,7 @@
                 </li>
                 <li class="review-form__attractions-item">
                   <input
-                    class="control-input control-input-check"
+                    class="control-input control-input-check visually-hidden"
                     id="check-2"
                     type="checkbox"
                     name="mountain-bell"
@@ -234,7 +234,7 @@
                 </li>
                 <li class="review-form__attractions-item">
                   <input
-                    class="control-input control-input-check"
+                    class="control-input control-input-check visually-hidden"
                     id="check-3"
                     type="checkbox"
                     name="slide-park"
@@ -244,7 +244,7 @@
                 </li>
                 <li class="review-form__attractions-item">
                   <input
-                    class="control-input control-input-check"
+                    class="control-input control-input-check visually-hidden"
                     id="check-4"
                     type="checkbox"
                     name="red-rocks"
